--- a/app/templates/repository/status.twig
+++ b/app/templates/repository/status.twig
@@ -3,7 +3,7 @@
 {% set page_title = repo.key %}
 
 {% block content %}
-    <h2>{{ repo.key }} Dashboard</h2>
+    <h2>{{ repo.key }} Repository Status</h2>
 
     <h3>Server Status</h3>
     <p>These cards show the current status of all servers with deployment relationships to this repository.</p>
