--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,6 +47,7 @@
 @import "partials/icons";
 @import "partials/cards";
 @import "partials/js";
+@import "partials/base/headings";
 @import "partials/base/forms";
 @import "partials/base/tables";
 @import "partials/base/error";
