--- a/sass/partials/_icons.scss
+++ b/sass/partials/_icons.scss
@@ -1,7 +1,7 @@
 .icon {
     position: relative;
-    width: 18px;
-    height: 18px;
+    width: 1em;
+    height: 1em;
     display: inline-block;
     top: 4px;
 }
@@ -13,10 +13,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-svg.icon {
-    fill: currentColor;
 }
 
 @mixin status {
