--- a/sass/partials/patterns/_nav.scss
+++ b/sass/partials/patterns/_nav.scss
@@ -1,16 +1,20 @@
-.nav--main, .nav--admin {
+[role="navigation"] {
+    background-color: $text-color;
+    box-shadow: 0px 5px 5px tint($grey, 50%);
+}
+
+.nav--main {
     max-width: 60em;
     margin: 0 auto;
     background-color: $text-color;
     height: 100%;
 }
 
-.nav--main li a, .nav--admin li a {
-    text-align: right;
+.nav--main li a {
     border-bottom: 1px solid $text-color;
     @include padding-leader(.25);
     @include padding-trailer(.25);
-    padding-right: msem(1);
+    padding-left: msem(0);
     color: $white;
     background-color: $text-color;
 
@@ -23,7 +27,11 @@
     }
 }
 
-.nav--main li:first-child a, .nav--admin li:first-child a {
+.nav--main li a .icon {
+    margin-right: msem(-3);
+}
+
+.nav--main li:first-child a {
     @include padding-leader(.25);
     border-top: 1px solid $white;
 }
@@ -34,16 +42,23 @@
 
             &,
             > a {
-                display: inline-block;
+                flex-grow: 0;
+                display: block;
             }
         }
     }
 
-    .nav--main li a, .nav--admin li a {
+    .nav--main {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .nav--main li a {
         text-align: center;
         @include padding-trailer(.25);
         padding-left: msem(-1);
         padding-right: msem(-1);
+        @include adjust-font-size-to(ms(-1));
 
         &:hover {
             @include padding-trailer(.25);
@@ -51,18 +66,41 @@
         }
     }
 
-    .nav--main li:first-child a, .nav--admin li:first-child a {
+    .nav--main li a .icon {
+        display: block;
+        margin: 0 auto msem(-3);
+        width: 32px;
+        height: 32px;
+    }
+
+    .nav--main li:first-child a {
         border-top: 0;
     }
 }
 
-.nav--admin {
-    background-color: $dark-blue;
-}
+@include breakpoint(42.1875em) {
+    [role="navigation"] {
+        @include padding-trailer(4);
+        @include padding-leader(.5);
+    }
 
-.nav--admin li a {
-    background-color: $dark-blue;
-    border-bottom: 1px solid $dark-blue;
+    [class*="nav"] {
+        > li {
+
+            &,
+            > a {
+                flex-grow: 1;
+            }
+        }
+
+        > li.signed-out {
+            flex-grow: 0;
+        }
+    }
+
+    .nav--main {
+        flex-wrap: nowrap;
+    }
 }
 
 .disabled {
