unstacked the logo to minimize space and did a little refactoring

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -33,7 +33,7 @@
     {% block header %}
         <header role="banner">
             <div class="hal">
-                <div class="wrapper">
+                <a href="/" class="wrapper">
 
                     <h1 class="hal-label">
                         <span class="hal-label__name">HAL</span>
@@ -51,7 +51,7 @@
                         </div>
                     </div>
 
-                </div>
+                </a>
             </div>
             {% block navigation %}
                 <nav role="navigation">
