--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,11 +41,13 @@
 //
 // Example: use @import "partials/nav" if you are adding style to the nav object.
 ///
+@import "partials/utilities/mixins";
 @import "partials/spacing";
 @import "partials/grid";
 @import "partials/global";
 @import "partials/icons";
 @import "partials/cards";
+@import "partials/halheader";
 @import "partials/js";
 @import "partials/base/headings";
 @import "partials/base/forms";
