--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -202,6 +202,19 @@
 {% endblock %}
 
 {% block script %}
-<script data-main="/js/main" src="/js/vendor/require-2.1.11.min.js"></script>
+    <script data-main="/js/main" src="/js/vendor/require-2.1.11.min.js"></script>
     {% block pageScript %}{% endblock %}
+    {% if (not user or (user and showAnalytics(user))) %}
+        <!-- BEGIN ANLYTICS -->
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-8298397-8', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <!-- END ANLYTICS -->
+    {% endif %}
 {% endblock %}
