--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,6 +49,8 @@
 @import "partials/cards";
 @import "partials/halheader";
 @import "partials/js";
+@import "partials/col-list";
+@import "partials/dash-box";
 @import "partials/base/headings";
 @import "partials/base/forms";
 @import "partials/base/tables";
