--- a/sass/partials/_cards.scss
+++ b/sass/partials/_cards.scss
@@ -1,7 +1,14 @@
-.cards {
+[class*="cards"] {
     @extend %clearfix;
 }
-.cards > li {
+
+.cards__baby > li{
+    width: 100%;
+    @include adjust-font-size-to(ms(-1));
+    @include trailer(2);
+}
+
+.cards > li{
     @include breakpoint(40em) {
         &:nth-child(odd) {
             @include grid-span(1, 1, $grid: 2, $gutter: .1);
@@ -30,7 +37,8 @@
         }
     }
 }
-.card {
+
+.card, .card__baby {
     @include padding-x(msem(-1));
     @include rhythm(0,.25,.25,1);
     box-shadow: 0 0 0 8px $light-grey;
