refactor of some parts

--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -8,8 +8,8 @@
 
     {# QUICK BUILD #}
 
-    <a class="btn hide-btn">Start a Build</a>
-    <div class="hide-box">
+    <a class="btn js-hide-btn">Start a Build</a>
+    <div class="build-box js-hide-box">
         <h3>Choose a Repository</h3>
         <div class="form-wrapper">
             <form action="" method="post">
