--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,7 +49,7 @@
 @import "partials/cards";
 @import "partials/halheader";
 @import "partials/js";
-@import "partials/col-list";
+@import "partials/build-box";
 @import "partials/dash-box";
 @import "partials/base/headings";
 @import "partials/base/forms";
