fixes from code review

--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -8,8 +8,8 @@
 
     {# QUICK BUILD #}
 
-    <a class="btn js-hide-btn">Start a Build</a>
-    <div class="build-box js-hide-box">
+    <button class="btn trailer js-hide-btn">Start a Build</button>
+    <div class="js-hide-box">
         <h3>Choose a Repository</h3>
         <div class="form-wrapper">
             <form action="" method="post">
