--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,7 +49,6 @@
 @import "partials/cards";
 @import "partials/halheader";
 @import "partials/js";
-@import "partials/build-box";
 @import "partials/dash-box";
 @import "partials/base/headings";
 @import "partials/base/forms";
@@ -61,5 +60,6 @@
 @import "partials/patterns/block-list";
 @import "partials/patterns/alert-bar";
 @import "partials/patterns/choice-list";
+@import "partials/patterns/col-list";
 @import "partials/patterns/split";
 @import "partials/patterns/terminal";
