initial functionality for build page.  needs refactoring

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,6 +48,8 @@
 @import "partials/icons";
 @import "partials/cards";
 @import "partials/halheader";
+@import "partials/drop-down";
+@import "partials/tabs";
 @import "partials/js";
 @import "partials/dash-box";
 @import "partials/base/headings";
