Remove api help page
Fixes HAL-26

--- a/app/templates/help/help.twig
+++ b/app/templates/help/help.twig
@@ -122,9 +122,12 @@
 
     <a name="api"></a>
     <h3>So, I heard there's an API. Is there any documentation?</h3>
+    <p>Nope.</p>
+    {#
     <p>
         Yes, a read-only API is currently available. Documentation can be found <a href="{{ urlFor('help.api') }}">here</a>.
     </p>
+    #}
 
 
 {% endblock %}
