--- a/app/templates/partials/push-box.twig
+++ b/app/templates/partials/push-box.twig
@@ -22,7 +22,7 @@
                 <section class="card__details">
                     <ul class="split mbn">
                         <li>
-                            <span class="split__title">{{ push.start|reldate }}</span>
+                            <span class="split__title">{{ push.created|reldate }}</span>
                             <a href="{{ urlFor('server', {'id': push.deployment.server.id}) }}">{{ push.deployment.server.name }}</a>
                         </li>
                     </ul>
