Force the intro to show the first time a user logs in to HAL

--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -32,7 +32,9 @@
                 </ul>
             </div>
         </div>
-    {% else %}
+    {% endif %}
+
+    {% if not repositories or isFirstLogin %}
 
        {{ block('intro') }}
 
