Update dashboard page title

--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = 'Hello, '~getUsersActualName(user)~'.' %}
+{% set page_title = 'Dashboard' %}
 
 {% block content %}
 
